# conways_game_of_life

./: CMakeLists.txt  main.cpp  main.h
include/: button.cpp  button.h  do_button.cpp  do_button.h  entry_field.cpp  entry_field.h  game_of_life.cpp  game_of_life.h  main_window.cpp  main_window.h  windows.cpp  windows.h
